# awesome-yuescript

./: .clangd  .gitignore  awful_menu.lua  config.json  debug.sh  init.lua  init.yue  install.sh  rc.lua  ryhI5-wFnESlX7jEtFf2PZJX97Z3wdBJNPLQdvWFZDJ5-PmSYLm5cqNAD398qOqe3TtyyOMH1Lq_16A=w544-h544-l90-rj  style-guide.md  watch.sh  x_preprocessed.h
config/gtk-3.0/: settings.ini
config/gtk-4.0/: gtk.css  settings.ini
config/picom/: picom.conf
macros/: init.yue
modules/: init.lua  init.yue
modules/core/: init.yue
modules/core/client/: init.yue
modules/core/input_bindings/: init.yue
modules/core/menu/: init.yue
modules/core/panel/: init.yue
modules/core/panel/applet/: README.md  init.yue
modules/core/panel/applet/battery/: init.yue
modules/core/panel/applet/brightness/: init.yue
modules/core/panel/common/: init.yue
modules/core/rules/: init.yue
modules/core/titlebar/: init.yue
modules/lib/: init.lua  init.yue
modules/lib/functional/: init.yue
modules/lib/hot_config/: init.yue
modules/lib/json/: init.yue
modules/lib/math/: init.yue
modules/lib/string/: init.yue
modules/lib/theme/: init.lua  init.yue
modules/lib/thread/: init.yue
modules/lib/x11_tools/: init.yue
modules/widget/: init.yue
modules/widget/inputbox/: init.yue
modules/widget/volume/: init.yue
native/: init.lua  init.yue  meson.build  native.c  test.lua  test.yue  watch.sh
surface_filter/: init.lua  init.yue  meson.build  test.lua  test.yue
surface_filter/src/: surface_filter.c  surface_filter.h  util.h
themes/dracula/: theme.lua  theme.yue
(+11 files in other folders)
